Creates div cautions

--- a/es/index.html
+++ b/es/index.html
@@ -17,6 +17,8 @@
             aprovechar espacio de las paredes y son fáciles de hacer, como
             veremos a continuación. 
         </p>
+    </div>
+    <div class="cautions">
         <h2>Precauciones y limitaciones</h2>
         <p>Explicaré a continuación algunas cosas a tener en cuenta antes de
             comenzar a trabajar. Por favor, leer hasta el final.
