Writes cautions, tools and some materials

--- a/es/index.html
+++ b/es/index.html
@@ -19,19 +19,31 @@
         </p>
     </div>
     <div class="cautions">
-        <h2>Precauciones y limitaciones</h2>
+        <h2>Precauciones, limitaciones y aclaraciones</h2>
         <p>Explicaré a continuación algunas cosas a tener en cuenta antes de
             comenzar a trabajar. Por favor, leer hasta el final.
+            
         </p>
+        <h3>"Terminología"</h3>
+        <ul>
+            <li>Las medidas de la madera se leen "largo x ancho x alto"</li>
+            <li>Las medidas de las ménsulas se leen "largo una pata x largo otra
+                pata x ancho"
+            </li>
+            <li>Las medidas se expresan en centímetros excepto que se aclare</li>
+        </ul>
         <h3>Respecto a la repisa</h3>
         <p>El tamaño de la repisa y la cantidad de ménsulas dependerá del
-            propósito de la ménsula. Por ejemplo, una repisa de 80cm de ancho y
-            20cm de profundidad dedicada a un par de figuritas solo requerirá
+            propósito de la ménsula. Por ejemplo, una repisa de 80 de ancho y
+            20 de profundidad dedicada a un par de figuritas solo requerirá
             dos ménsulas, pero una repisa del mismo tamaño dedicada a plantas o
             libros requerirá, probablemente de tres ménsulas. Por esto mismo, en
             caso de duda, recomiendo colocar dos ménsulas, probar si la madera 
             se arquea o se ve forzada y, si es así, colocar una tercera ménsula
-            en el medio. Más detalles de esto luego.
+            en el medio. Este método fue testeado con repisas de 1m sin
+            mucha carga. Para repisas de mayor ancho, bastará con agregar más
+            ménsulas, peron en profundidad, recomindo no superar los 30cm. En
+            caso de hacerlo, recomiendo amurar de otra forma.
         </p>
         <h3>Respecto a donde hacer el agujero</h3>
         <p>El principal inconveniente que te puedes encontrar es respecto a los
@@ -54,7 +66,41 @@
         <p>Más información al respecto:</p>
     </div>
     <div class="tools">
-
+        <h2>Herramientas</h2>
+        <input type="checkbox" class="checkitem" name="pencil"/>
+        <label for="pencil">Lápiz</label>
+        <input type="checkbox" class="checkitem" name="meter"/>
+        <label for="meter">Cinta métrica</label>
+        <input type="checkbox" class="checkitem" name="screwdriver"/>
+        <label for="screwdriver">Destornillador phillips</label>
+        <input type="checkbox" class="checkitem" name="drill"/>
+        <label for="drill">Taladro</label>
+        <input type="checkbox" class="checkitem" name="level"/>
+        <label for="level">Nivel de mano</label>
+        <input type="checkbox" class="checkitem" name="hammer"/>
+        <label for="hammer">Martillo</label>
+        <input type="checkbox" class="checkitem" name="square"/>
+        <label for="square">Escuadra de precisión</label>
+        <p>Si necesitás cortar la madera, necesitarás:</p>
+        <input type="checkbox" class="checkitem" name="saw"/>
+        <label for="saw">Sierra circular o de mano</label>
+    </div>
+    <div class="mats">
+        <h2>Materiales para repisa de 60x20x18mm (escalar a otros tamaños):</h2>
+        <input type="checkbox" class="checkitem" name="wood"/>
+        <label for="wood">Madera de 60x20x18mm o madera de ?x20x18mm para
+            cortar
+        </label>
+        <input type="checkbox" class="checkitem" name="bracket"/>
+        <label for="bracket">2 ménsulas esquineras de 20x15x4in a la profundidad de la
+            repisa
+        </label>
+        <input type="checkbox" class="checkitem" name="screws"/>
+        <label for="screws">4 tornillos para madera de 2 cm</label>
+        <input type="checkbox" class="checkitem" name="drill"/>
+        <label for="drill">Taladro</label>
+        <input type="checkbox" class="checkitem" name="level"/>
+        <label for="level">Nivel de mano</label>
     </div>
     <div class="steps">
 
