--- a/es/index.html
+++ b/es/index.html
@@ -37,12 +37,12 @@
             propósito de la ménsula. Por ejemplo, una repisa de 80 de ancho y
             20 de profundidad dedicada a un par de figuritas solo requerirá
             dos ménsulas, pero una repisa del mismo tamaño dedicada a plantas o
-            libros requerirá, probablemente de tres ménsulas. Por esto mismo, en
+            requerirá, probablemente de tres ménsulas. Por esto mismo, en
             caso de duda, recomiendo colocar dos ménsulas, probar si la madera 
             se arquea o se ve forzada y, si es así, colocar una tercera ménsula
             en el medio. Este método fue testeado con repisas de 1m sin
             mucha carga. Para repisas de mayor ancho, bastará con agregar más
-            ménsulas, peron en profundidad, recomindo no superar los 30cm. En
+            ménsulas, pero en profundidad, recomidndo no superar los 30cm. En
             caso de hacerlo, recomiendo amurar de otra forma.
         </p>
         <h3>Respecto a donde hacer el agujero</h3>
@@ -65,67 +65,69 @@
         </ul>
         <p>Más información al respecto:</p>
     </div>
-    <div class="tools">
-        <h2>Herramientas</h2>
-        <div class="checkitem">
-            <input type="checkbox" name="pencil"/>
-            <label for="pencil">Lápiz</label>
+    <div class="checkboxes">
+        <div class="tools">
+            <h2>Herramientas</h2>
+            <div class="checkitem">
+                <input type="checkbox" name="pencil"/>
+                <label for="pencil">Lápiz</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="meter"/>
+                <label for="meter">Cinta métrica</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="screwdriver"/>
+                <label for="screwdriver">Destornillador phillips</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="drill"/>
+                <label for="drill">Taladro</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="level"/>
+                <label for="level">Nivel de mano</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="hammer"/>
+                <label for="hammer">Martillo</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="square"/>
+                <label for="square">Escuadra de precisión</label>
+            </div>
+            <p>Si necesitás cortar la madera, usá:</p>
+            <div class="checkitem">
+                <input type="checkbox" name="saw"/>
+                <label for="saw">Sierra circular o de mano</label>
+            </div>
         </div>
-        <div class="checkitem">
-            <input type="checkbox" name="meter"/>
-            <label for="meter">Cinta métrica</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="screwdriver"/>
-            <label for="screwdriver">Destornillador phillips</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="drill"/>
-            <label for="drill">Taladro</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="level"/>
-            <label for="level">Nivel de mano</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="hammer"/>
-            <label for="hammer">Martillo</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="square"/>
-            <label for="square">Escuadra de precisión</label>
-        </div>
-        <p>Si necesitás cortar la madera, necesitarás:</p>
-        <div class="checkitem">
-            <input type="checkbox" name="saw"/>
-            <label for="saw">Sierra circular o de mano</label>
-        </div>
-    </div>
-    <div class="mats">
-        <h2>Materiales para repisa de 60x20x18mm (escalar a otros tamaños):</h2>
-        <div class="checkitem">
-            <input type="checkbox" name="wood"/>
-            <label for="wood">Madera de 60x20x18mm o madera de ?x20x18mm para
+        <div class="mats">
+            <h2>Materiales para repisa de 60x20x18mm (escalar a otros tamaños):</h2>
+            <div class="checkitem">
+                <input type="checkbox" name="wood"/>
+                <label for="wood">Madera de 60x20x18mm o madera de ?x20x18mm para
                 cortar
-            </label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="bracket"/>
-            <label for="bracket">2 ménsulas esquineras de 20x15x4in a la profundidad de la
+                </label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="bracket"/>
+                <label for="bracket">2 ménsulas esquineras de 20x15x a la profundidad de la
                 repisa
-            </label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="screws"/>
-            <label for="screws">4 tornillos para madera de 2 cm</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="drill"/>
-            <label for="drill">Taladro</label>
-        </div>
-        <div class="checkitem">
-            <input type="checkbox" name="level"/>
-            <label for="level">Nivel de mano</label>
+                </label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="screws"/>
+                <label for="screws">4 tornillos para madera de 2 cm</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="drill"/>
+                <label for="drill">Taladro</label>
+            </div>
+            <div class="checkitem">
+                <input type="checkbox" name="level"/>
+                <label for="level">Nivel de mano</label>
+            </div>
         </div>
     </div>
     <div class="steps">
@@ -135,23 +137,16 @@
         <form action="">
             <div class="formInput">
                 <label for="GET-name">Nombre:</label>
-                <input id="GET-name" type="text" name="name" />
+                <input id="GET-name" type="text" name="name"
+                placeholder="Roberto Casablanca"/>
             </div>
             <div class="formInput">
-                <label for="GET-img">Imagen:</label>
-                <input id="GET-img" type="image" name="image" alt="Submit" />
+                <label for="GET-img">Foto de/con tu repisa en uso:</label>
+                <input id="GET-img" type="image" name="image" alt="Subir" />
             </div>
             <div class="formInput">
-                <label for="GET-desc">Descripción:</label>
-                <input id="GET-desc" type="text" name="desc" />
-            </div>
-            <div class="formInput">
-                <label for="GET-price">Precio:</label>
-                <input id="GET-price" type="text" name="price" />
-            </div>
-            <div class="formInput">
-                <label for="GET-cat">Categoría:</label>
-                <input id="GET-cat" type="text" name="cat" />
+                <label for="GET-text">Cómo fue tu experiencia:</label>
+                <input id="GET-text" type="text" name="text" />
             </div>
             <div class="submit">
                 <input type="submit" value="Guardar"/>
