Creates and styles need

--- a/es/index.html
+++ b/es/index.html
@@ -76,6 +76,9 @@
         <p>Más información al respecto:</p>
         </div>
     </div>
+    <div class ="need">
+        <h2>Cosas que necesitamos</h2>
+        <p>para una repisa de 60x20x18mm</p>
     <div class="checkboxes">
         <div class="tools">
             <h2>Herramientas</h2>
@@ -107,15 +110,14 @@
                 <input type="checkbox" name="square"/>
                 <label for="square">Escuadra de precisión</label>
             </div>
-            <p>Si necesitás cortar la madera, usá:</p>
             <div class="checkitem">
                 <input type="checkbox" name="saw"/>
-                <label for="saw">Sierra circular o de mano</label>
+                <label for="saw">Sierra circular o de mano, (si es necesario
+                    cortar la madera)</label>
             </div>
         </div>
         <div class="mats">
             <h2>Materiales</h2>
-            <p>para repisa de 60x20x18mm</p>
             <div class="checkitem">
                 <input type="checkbox" name="wood"/>
                 <label for="wood">Madera de 60x20x18mm o madera de ?x20x18mm para
@@ -133,14 +135,15 @@
                 <label for="screws">4 tornillos para madera de 2 cm</label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name=""/>
-                <label for="drill">4 tacos con respectivos tornillos</label>
+                <input type="checkbox" name="ramplug"/>
+                <label for="ramplug">4 tacos con respectivos tornillos</label>
             </div>
             <div class="checkitem">
                 <input type="checkbox" name="sandpaper"/>
-                <label for="sandpaper">Lija de mano grano N°80</label>
+                <label for="sandpaper">Lija de mano grano n°80</label>
             </div>
         </div>
+    </div>
     </div>
     <div class="steps">
 
