Style checkboxes and change sizes from vw to px

--- a/es/index.html
+++ b/es/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Repisas 101</h1>
-        <p>Una guía simple e intuitiva para hacer tu propia repisa</p>
+        <h1>Repisas <strong>101</strong></h1>
+        <h3>Una guía simple e intuitiva para hacer tu propia repisa</h3>
     </div>
     <div class="what">
         <h2>¿Qué es una repisa?</h2>
@@ -57,7 +57,7 @@
         </p>
         </div>
         <div class="caution">
-        <h3>Donde colocar la repisa</h3>
+        <h3>Dónde colocar la repisa</h3>
         <p>Hay que ser muy cuidadosos, ya que, agujereando donde no se debe, 
             podemos dañar la pared, algo que este dentro, el taladro y hasta a
             nosotros mismos. Les dejo links al respecto, ya que soy algo
@@ -77,70 +77,93 @@
         </div>
     </div>
     <div class ="need">
-        <h2>Cosas que necesitamos</h2>
-        <p>para una repisa de 60x20x18mm</p>
+        <p>Para una repisa de 60x20x18mm...</p>
+    <h2>Necesitamos:</h2>
     <div class="checkboxes">
         <div class="tools">
             <h2>Herramientas</h2>
+            <div class="list">
             <div class="checkitem">
-                <input type="checkbox" name="pencil"/>
-                <label for="pencil">Lápiz</label>
+                <label for="pencil">
+                    <input type="checkbox" name="pencil"/>
+                    Lápiz
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="meter"/>
-                <label for="meter">Cinta métrica</label>
+                <label for="meter">
+                    <input type="checkbox" name="meter"/>
+                    Cinta métrica
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="screwdriver"/>
-                <label for="screwdriver">Destornillador phillips</label>
+                <label for="screwdriver">
+                    <input type="checkbox" name="screwdriver"/>
+                    Destornillador phillips
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="drill"/>
-                <label for="drill">Taladro</label>
+                <label for="drill">
+                    <input type="checkbox" name="drill"/>
+                    Taladro
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="level"/>
-                <label for="level">Nivel de mano</label>
+                <label for="level">
+                    <input type="checkbox" name="level"/>
+                    Nivel de mano
+                </label>
             </div>
             <div class="checkitem">
                 <input type="checkbox" name="hammer"/>
                 <label for="hammer">Martillo</label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="square"/>
-                <label for="square">Escuadra de precisión</label>
+                <label for="square">
+                    <input type="checkbox" name="square"/>
+                    Escuadra de precisión
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="saw"/>
-                <label for="saw">Sierra circular o de mano, (si es necesario
-                    cortar la madera)</label>
+                <label for="saw">
+                    <input type="checkbox" name="saw"/>
+                    Sierra circular o de mano (si es necesario cortar la madera)
+                </label>
+            </div>
             </div>
         </div>
         <div class="mats">
             <h2>Materiales</h2>
+            <div class="list">
             <div class="checkitem">
-                <input type="checkbox" name="wood"/>
-                <label for="wood">Madera de 60x20x18mm o madera de ?x20x18mm para
-                cortar
+                <label for="wood">
+                    <input type="checkbox" name="wood"/>
+                    Madera de 60x20x18mm o madera de ?x20x18mm para cortar
                 </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="bracket"/>
-                <label for="bracket">2 ménsulas esquineras de 20x15x1,5in a la
-                    profundidad de la repisa
+                <label for="bracket">
+                    <input type="checkbox" name="bracket"/>
+                    2 ménsulas esquineras de 20x15x1,5in
                 </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="screws"/>
-                <label for="screws">4 tornillos para madera de 2 cm</label>
+                <label for="screws">
+                    <input type="checkbox" name="screws"/>
+                    4 tornillos para madera de 2 cm
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="ramplug"/>
-                <label for="ramplug">4 tacos con respectivos tornillos</label>
+                <label for="ramplug">
+                    <input type="checkbox" name="ramplug"/>
+                    4 tacos con respectivos tornillos
+                </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="sandpaper"/>
-                <label for="sandpaper">Lija de mano grano n°80</label>
+                <label for="sandpaper">
+                    <input type="checkbox" name="sandpaper"/>
+                    Lija de mano grano n°80
+                </label>
+            </div>
             </div>
         </div>
     </div>
@@ -149,6 +172,7 @@
 
     </div>
     <div class="form">
+        <h2></h2>
         <form action="">
             <div class="formInput">
                 <label for="GET-name">Nombre:</label>
