--- a/es/index.html
+++ b/es/index.html
@@ -44,13 +44,15 @@
         <div class="caution">
         <h3>Repisa</h3>
         <p>El tamaño de la repisa y la cantidad de ménsulas dependerá del
-            propósito de la ménsula. Por ejemplo, una repisa de 80 de ancho y
-            20 de profundidad dedicada a un par de figuritas solo requerirá
-            dos ménsulas, pero una repisa del mismo tamaño dedicada a plantas o
-            requerirá, probablemente de tres ménsulas. Por esto mismo, en
-            caso de duda, recomiendo colocar dos ménsulas, probar si la madera 
-            se arquea o se ve forzada y, si es así, colocar una tercera ménsula
-            en el medio. Este método fue testeado con repisas de 1m sin
+            propósito de la repisa. Por ejemplo, una repisa de 80x20x18mm
+            dedicada a un par de figuritas solo requerirá
+            dos ménsulas, pero una repisa del mismo tamaño dedicada a plantas
+            requerirá, probablemente, de tres. Por esto mismo, en
+            caso de duda, recomiendo colocar dos ménsulas a los costados,
+            probar si la madera se arquea o se ve forzada y, si es así, colocar
+            una tercera ménsula en el medio.
+        </p>
+        <p>Esta guía fue testeada con repisas de 1m sin
             mucha carga. Para repisas de mayor ancho, bastará con agregar más
             ménsulas, pero en profundidad, recomiendo no superar los 30cm. En
             caso de hacerlo, recomiendo amurar de otra forma.
@@ -60,10 +62,11 @@
         <h3>Dónde colocar la repisa</h3>
         <p>Hay que ser muy cuidadosos, ya que, agujereando donde no se debe, 
             podemos dañar la pared, algo que este dentro, el taladro y hasta a
-            nosotros mismos. Les dejo links al respecto, ya que soy algo
-            ignorante en el tema, pero procedo a dejar algunos lugares donde es
-            mayormente riesgoso agujerear, tanto cerca, como horizontal y
-            verticalmente, excepto que sepas lo que estás haciendo, .
+            nosotros mismos. <strong>Recomiendo investigar</strong>, ya que soy
+            algo ignorante en el tema, pero procedo a dejar algunos <strong>
+            lugares donde es mayormente riesgoso agujerear</strong>, tanto cerca
+            , como horizontal y verticalmente, excepto que sepas lo que estás
+            haciendo:
         </p>
         <ul>
             <li>Lámparas</li>
@@ -84,47 +87,49 @@
             <h2>Herramientas</h2>
             <div class="list">
             <div class="checkitem">
-                <label for="pencil">
+                <label class="item">
                     <input type="checkbox" name="pencil"/>
                     Lápiz
                 </label>
             </div>
             <div class="checkitem">
-                <label for="meter">
+                <label class="item">
                     <input type="checkbox" name="meter"/>
                     Cinta métrica
                 </label>
             </div>
             <div class="checkitem">
-                <label for="screwdriver">
+                <label class="item">
                     <input type="checkbox" name="screwdriver"/>
                     Destornillador phillips
                 </label>
             </div>
             <div class="checkitem">
-                <label for="drill">
+                <label class="item">
                     <input type="checkbox" name="drill"/>
                     Taladro
                 </label>
             </div>
             <div class="checkitem">
-                <label for="level">
+                <label class="item">
                     <input type="checkbox" name="level"/>
                     Nivel de mano
                 </label>
             </div>
             <div class="checkitem">
-                <input type="checkbox" name="hammer"/>
-                <label for="hammer">Martillo</label>
+                <label class="item">
+                    <input type="checkbox" name="hammer"/>
+                    Martillo
+                </label>
             </div>
             <div class="checkitem">
-                <label for="square">
+                <label class="item">
                     <input type="checkbox" name="square"/>
                     Escuadra de precisión
                 </label>
             </div>
             <div class="checkitem">
-                <label for="saw">
+                <label class="item">
                     <input type="checkbox" name="saw"/>
                     Sierra circular o de mano (si es necesario cortar la madera)
                 </label>
@@ -135,31 +140,31 @@
             <h2>Materiales</h2>
             <div class="list">
             <div class="checkitem">
-                <label for="wood">
+                <label class="item">
                     <input type="checkbox" name="wood"/>
                     Madera de 60x20x18mm o madera de ?x20x18mm para cortar
                 </label>
             </div>
             <div class="checkitem">
-                <label for="bracket">
+                <label class="item">
                     <input type="checkbox" name="bracket"/>
                     2 ménsulas esquineras de 20x15x1,5in
                 </label>
             </div>
             <div class="checkitem">
-                <label for="screws">
+                <label class="item">
                     <input type="checkbox" name="screws"/>
                     4 tornillos para madera de 2 cm
                 </label>
             </div>
             <div class="checkitem">
-                <label for="ramplug">
+                <label class="item">
                     <input type="checkbox" name="ramplug"/>
                     4 tacos con respectivos tornillos
                 </label>
             </div>
             <div class="checkitem">
-                <label for="sandpaper">
+                <label class="item">
                     <input type="checkbox" name="sandpaper"/>
                     Lija de mano grano n°80
                 </label>
