--- a/es/index.html
+++ b/es/index.html
@@ -83,7 +83,7 @@
         <p>Para una repisa de 60x20x18mm...</p>
     <h2>Necesitamos:</h2>
     <div class="checkboxes">
-        <div class="tools">
+        <div class="needles">
             <h2>Herramientas</h2>
             <div class="list">
             <div class="checkitem">
@@ -134,9 +134,22 @@
                     Sierra circular o de mano (si es necesario cortar la madera)
                 </label>
             </div>
+            <h4>Recomiendo:</h4>
+            <div class="checkitem">
+                <label class="item">
+                    <input type="checkbox" name="glasses"/>
+                    Gafas de protección
+                </label>
+            </div>
+            <div class="checkitem">
+                <label class="item">
+                    <input type="checkbox" name="auditive"/>
+                    Protector auditivo
+                </label>
+            </div>
             </div>
         </div>
-        <div class="mats">
+        <div class="needles">
             <h2>Materiales</h2>
             <div class="list">
             <div class="checkitem">
@@ -174,7 +187,24 @@
     </div>
     </div>
     <div class="steps">
-
+        <h2>Pasos a seguir</h2>
+        <div id="concrete">
+        <div class="step">
+            <h3>Cortar y lijar madera</h3>
+        </div>
+        <div class="step">
+            <h3>Atornillar ménsulas a la madera</h3>
+        </div>
+        <div class="step">
+            <h3>Primer agujero</h3>
+        </div>
+        <div class="step">
+            <h3>Segundo agujero</h3>
+        </div>
+        <div class="step">
+            <h3>Agujeros restantes</h3>
+        </div>
+        </div>
     </div>
     <div class="form">
         <h2></h2>
