Finish form styling

--- a/es/index.html
+++ b/es/index.html
@@ -219,8 +219,8 @@
             </div>
             <div id="expInput" class="formInput">
                 <label for="exp">Cómo fue tu experiencia:</label>
-                <input id="GET-exp" type="text" name="exp" 
-                placeholder="Fue una experiencia..."/>
+                <textarea id="GET-exp" type="text" name="exp"
+                placeholder="Fue una experiencia...F"></textarea>
             </div>
             <div class="submit">
                 <input class="submitBtn" type="submit" value="Guardar"/>
